--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="img/person-circle.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+      <img src="person-circle.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
       Pascoal André - Portfólio 
     </a>
   </div>
